--- a/src/styles/base/_globals.scss
+++ b/src/styles/base/_globals.scss
@@ -14,6 +14,10 @@ body {
   color: $text-primary;
 }
 
+html {
+  font-size: 18px;
+}
+
 body {
   font-family: $font-family-base;
   font-size: $font-size-md;
