--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,6 +11,7 @@
       </a>
       <a routerLink="/timers" routerLinkActive="active">Timers</a>
       <a routerLink="/checklist" routerLinkActive="active">Checklist</a>
+      <a routerLink="/guides" routerLinkActive="active">Guides</a>
     </nav>
 
     <button
@@ -36,6 +37,7 @@
     </a>
     <a routerLink="/timers" routerLinkActive="active" (click)="closeMenu()"> Timers </a>
     <a routerLink="/checklist" routerLinkActive="active" (click)="closeMenu()"> Checklist </a>
+    <a routerLink="/guides" routerLinkActive="active" (click)="closeMenu()"> Guides </a>
   </nav>
 
   <!-- Player row: lives after the mobile menu in DOM so menu is above it on mobile -->
